--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,13 +1,22 @@
----
-- hosts: travis
+- hosts: travis-trusty
   connection: docker
   remote_user: root
-  vars:
-    mods_enabled:
-      - userdir
+  pre_tasks:
+    - name: Include test vars
+      include_vars: 'test-vars.yml'
+  roles:
+    - {
+      role: ansible-role-apache
+    }
+
+- hosts: travis-xenial
+  connection: docker
+  remote_user: root
+  pre_tasks:
+    - name: Include test vars
+      include_vars: 'test-vars.yml'
   roles:
     - {
       role: ansible-role-apache,
-      apache_mods_enabled: '{{ mods_enabled }}',
-      apache_init_system: 'runit'
+      mysql_init_system: 'systemd'
     }
